# integration-testing

./: README.md
fran-app/: LICENSE
fran-app/backend/src/: app.service.ts
fran-app/desktop_app/: pyproject.toml  src.test.db  test.db
fran-app/desktop_app/src/: 1_🏠_Home.py  IntegrationFacade.py  integration.py  limpardb.py  models.py  test.db
fran-app/desktop_app/src/Controllers/: ItemSaleController.py  ProductController.py  SaleController.py  StorageController.py
fran-app/desktop_app/src/Services/: IntegrationFacade.py  integration.py
fran-app/desktop_app/src/Services/Payment/: CashPaymentStrategy.py  CreditCardPaymentStrategy.py  PaymentProcessor.py  PaymentStrategy.py  PixPaymentStrategy.py
fran-app/desktop_app/src/pages/: 2_📃_Pedidos.py  3_📦_Estoque.py
fran-app/desktop_app/tests/: test_int1.py
fran-app/docs/: notes.excalidraw
pages/: p1.md  p2.md  p3.md  p4.md  p5.md
